# yhack2026

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
.claude/: launch.json
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: acled.py  gdelt.py
backend/app/routers/: analysis.py  conflicts.py  news.py
backend/app/services/: acled.py  cache.py  gdelt.py  gemini.py  severity.py  supabase.py
backend/tests/: conftest.py  test_api.py  test_models.py  test_severity.py
conflictlens/: package-lock.json  package.json
conflictlens/app/api/events/: route.ts
conflictlens/app/api/subscribe/: route.ts
conflictlens/app/api/summarize/: route.ts
conflictlens/schemas/: email_subscribers.sql
schemas/: ai_briefings.sql  conflict_events.sql  news_articles.sql  ngos.sql  watchlist.sql
scripts/: import_acled.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/backfill/: route.ts
src/app/api/briefing/: route.ts
src/app/api/chat/: route.ts
src/app/api/conflict-zones/: route.ts
src/app/app/: layout.tsx  page.tsx
src/components/: AuthModal.tsx  ChatPanel.tsx  ConflictDetail.tsx  LeftPanel.tsx  MapGlobe.tsx  Navbar.tsx  RightPanel.tsx  ShaderBackground.tsx  ThemeProvider.tsx  TimelineBar.tsx
src/components/ui/: animated-shader-hero.tsx  cobe-globe.tsx
src/data/: conflicts.ts  filters.ts  timeline.ts
src/lib/: buildZonesFromEvents.ts  supabase-server.ts  supabase.ts  useAuth.ts  useConflictEvents.ts  useWatchlist.ts
(+12 files in other folders)
