[project]
name = "conflictlens-backend"
version = "0.1.0"
description = "ConflictLens API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "supabase>=2.13",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pandas>=2.2",
    "google-genai>=1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
